--- a/_EFGs/S2.1.md
+++ b/_EFGs/S2.1.md
@@ -24,7 +24,7 @@ Excavations associated with tunnels, vaults and mines. While some are abandoned,
 
 Scattered worldwide, but mostly associated with urban centres, transit corridors and industrial mines.
 
-{% capture map_det %} ? {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
 
 ## References
@@ -33,3 +33,7 @@ Scattered worldwide, but mostly associated with urban centres, transit corridors
 
 * Gibert J, Deharveng L (2002) Subterranean ecosystems: a truncated functional biodiversity. BioScience 52: 473-481.
 * Engel AS (2010) Microbial diversity of cave ecosystems. In: Geomicrobiology: Molecular and environmental perspective (Eds. LL Barton, M Mandl, A Loy), pp219-238. Springer, Dordrecht.
+
+### Map References
+
+* Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
