--- a/_EFGs/T2.5.md
+++ b/_EFGs/T2.5.md
@@ -9,19 +9,19 @@ mapcontributors: JR Ferrer-Paris, DA Keith
 version: v1.0, 2020-01-20 12:00:00
 ---
 # Ecological Traits
- 
+
 This group includes the tallest forests. They are moist, multi-layered forests in wet temperate climates with complex spatial structure and very high biomass and LAI. The upper layer is an open canopy of sclerophyllous trees 40-90 m tall with long, usually unbranched trunks. The open canopy structure allows light transmission sufficient for development of up to three subcanopy layers, consisting mostly of non-sclerophyllous trees and shrubs with higher SLA than the upper canopy species. These forests are highly productive, grow rapidly, draw energy from autochonous sources and store very large quantities of carbon both above and below ground. They have complex trophic networks, with a diverse invertebrate, reptile, bird and mammal fauna with assemblages that live primarily in the tree canopy or the forest floor, and some that move regularly between vertical strata. Some species are endemic and have traits associated with large trees including use of wood cavities, thick or loose bark, large canopies, woody debris and deep moist leaf litter. There is significant diversification of avian foraging methods and hence high functional and taxonomic diversity of birds. High deposition rates of leaf litter and woody debris, sustain diverse fungal decomposers and invertebrate detritivores, and provide nesting substrates and refuges for ground mammals and avian insectivores. The shade-tolerant ground flora may include a diversity of ferns forbs, grasses (mostly C3) and bryophytes. The dominant trees are shade-intolerant and depend on tree-fall gaps or periodic fires for regeneration. In cooler climates, trees are killed by canopy fires but may survive surface fires, and canopy seedbanks are crucial to persistence. Epicormic resprouting is more common in warmer climates. Subcanopy and ground layers include both shade-tolerant and shade-intolerant plants, the latter with physically and physiologically dormant seedbanks that cue episodes of mass regeneration to fire. Multi-decadal or century-scale canopy fires consume biomass, liberate resources and trigger life-history processes in a range of biota.  Seedbanks sustain plant diversity through storage effects.
- 
+
 # Key Ecological Drivers
- 
+
 There is an annual water surplus, but with seasonal variation (peak surplus in winter) and rare major summer deficits associated with inter-annual drought cycles.  Multiple tree layers produce a light diminution gradient and moist micro-climates at ground level. Winters are cool and summers are warm with occasional heat waves that dry out the moist micro-climate and enable periodic fires, which may be extremely intense and consume the canopy. The growing season is 6-8 months; snow is uncommon and short-lived. Soils are relatively fertile, but often limited in Nitrogen.
- 
+
 # Diagramatic assembly model
- 
+
 {% include DAM.html %}
- 
+
 # Distribution
- 
+
 Temperate southeast and southwest Australia.
 
 {% capture map_det %}
@@ -35,5 +35,5 @@ We used remote sensing estimates of canopy height as a direct indicator of the e
 * Mac Nally RC (1995) On large-scale dynamics and community structure in forest birds: Lessons from some eucalypt forests of southeastern Australia. Philosophical Transactions of the Royal Society B 350B: 369-79.
 ### Map References
 * Armston, J., Scarth, P., Lucas, R., Lewis, P., Disney, M., Phinn, S. (2015). *Validation of continental scale vertical plant profile mapping using waveform lidar airborne laser scanning*. In Conference Proceedings: **Silvilaser 2015**, La Grande Motte, France, 28-30 September.
-* Hao Tang, John Armston, Steven Hancock, Suzanne Marselis, Scott Goetz, Ralph Dubayah (2019) *Characterizing global forest canopy cover distribution using spaceborne lidar*, **Remote Sensing of Environment** 231: 111262 DOI: [10.1016/j.rse.2019.111262](https://doi.org/10.1016/j.rse.2019.111262.)
+* Hao Tang, John Armston, Steven Hancock, Suzanne Marselis, Scott Goetz, Ralph Dubayah (2019) *Characterizing global forest canopy cover distribution using spaceborne lidar*, **Remote Sensing of Environment** 231: 111262 DOI: [10.1016/j.rse.2019.111262](https://doi.org/10.1016/j.rse.2019.111262)
 * Beck, H., Zimmermann, N., McVicar, T. et al. *Present and future Köppen-Geiger climate classification maps at 1-km resolution*. **Sci Data** 5, 180214 (2018). DOI: [10.1038/sdata.2018.214](https://doi.org/10.1038/sdata.2018.214)
