--- a/_EFGs/T5.5.md
+++ b/_EFGs/T5.5.md
@@ -5,7 +5,7 @@ realm: Terrestrial
 code: T5.5
 biomecode: T5
 contributors: MG Tozer, D Faber-Langendoen, DA Keith
-mapcontributors: DA Keith, JR Ferrer-Paris
+mapcontributors: JR Ferrer-Paris, DA Keith
 version: v1.0, 2020-01-20 12:00:00
 ---
 # Ecological Traits
@@ -25,7 +25,7 @@ Extreme rainfall deficit arising from very low rainfall (150mm to almost zero an
 Driest parts of the Sahara-Arabian, Atacama and Namib deserts in subtropical latitudes.
 
 {% capture map_det %}
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
+We calculated the aridity index (AI, UNEP 1992) using  spatio-temporal series of precipitation and potential evapotranspiration (Harris et al. 2014), and selected areas of hyper-arid climate (AI<0.05).
 {% endcapture %}
 {% include MAP.html %}
 
@@ -34,4 +34,4 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 * Zablocki O, Adriaenssens EM, Cowan D (2016) Diversity and ecology of viruses in hyperarid desert soils. Applied and Environmental Microbioly 82: 770 –777.
 * Rundel P W, Dillon MO, Palma B, Mooney HA, Gulmon SL, Ehleringer JR (1991) The phytogeography and ecology of the coastal Atacama and Peruvian deserts. Aliso 13(1): 2.
 ### Map References
-* Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
+* Harris, I., Jones, P.D., Osborn, T.J. and Lister, D.H. (2014), *Updated high-resolution grids of monthly climatic observations - the CRU TS3.10 Dataset*. **International Journal of Climatology** 34, 623-642 [doi:10.1002/joc.3711](http://dx.doi.org/10.1002/joc.3711) [Revised appendix](https://crudata.uea.ac.uk/cru/data/hrg/Revised_Appendix_3_CLD.pdf)
