--- a/_EFGs/T5.1.md
+++ b/_EFGs/T5.1.md
@@ -5,7 +5,7 @@ realm: Terrestrial
 code: T5.1
 biomecode: T5
 contributors: MG Tozer, DA Keith
-mapcontributors: DA Keith, JR Ferrer-Paris
+mapcontributors: JR Ferrer-Paris, DA Keith
 version: v1.0, 2020-03-09 09:54:03
 ---
 # Ecological Traits
@@ -25,7 +25,7 @@ Semi-desert steppes is associated with fine-textured, non-acid soils of low-mode
 Extensive areas across the Sahara, Arabian Peninsula and west Asia, southwest Africa, southern Australia, Argentina and midwest USA.
 
 {% capture map_det %}
-TEOW
+We calculated the aridity index (AI, UNEP 1992) using  spatio-temporal series of precipitation and potential evapotranspiration (Harris et al. 2014), and selected areas of semi-arid and arid climates (0.05<AI<0.65) and low to moderate vegetation cover according to consensus landcover maps (Tuanmu et al. 2014). We exluded areas in Europe and northern South America. Occurrences were aggregated to half degree spatial resolution and cells reclassified as major (>30%) and minor occurrences (< 30%).
 {% endcapture %}
 {% include MAP.html %}
 
@@ -33,4 +33,6 @@ TEOW
 ### Main references
 * Eldridge DJ, Travers SK, Facelli AF, Facelli JM, Keith DA (2017) The Chenopod shrublands. In: Australian vegetation. (Ed. DA Keith), pp599-625. Cambridge University Press, Cambridge.
 ### Map References
-* 
+* Harris, I., Jones, P.D., Osborn, T.J. and Lister, D.H. (2014), *Updated high-resolution grids of monthly climatic observations - the CRU TS3.10 Dataset*. **International Journal of Climatology** 34, 623-642 [doi:10.1002/joc.3711](http://dx.doi.org/10.1002/joc.3711) [Revised appendix](https://crudata.uea.ac.uk/cru/data/hrg/Revised_Appendix_3_CLD.pdf)
+* UNEP (1992) World atlas of desertification, edited by N. Middleton and D. S. G. Thomas. Edward Arnold (United Nations Environment Programme), London. ISBN 0 340 55512 2
+* Tuanmu, M.-N. and W. Jetz. 2014. A global 1-km consensus land-cover product for biodiversity and ecosystem modeling. Global Ecology and Biogeography 23(9): 1031-1045.
