--- a/_EFGs/T5.2.md
+++ b/_EFGs/T5.2.md
@@ -5,7 +5,7 @@ realm: Terrestrial
 code: T5.2
 biomecode: T5
 contributors: MG Tozer, DA Keith
-mapcontributors: DA Keith, JR Ferrer-Paris
+mapcontributors: JR Ferrer-Paris, DA Keith
 version: v1.0, 2020-01-20 12:00:00
 ---
 # Ecological Traits
@@ -31,7 +31,7 @@ Mostly subtropical latitudes in the Americas, southern Africa and southern Asia.
 
 
 {% capture map_det %}
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
+We identified areas with *arid cold deserts* and *arid hot steppes* climates according to the Köppen-Geiger climate classification (Beck et al. 2018), but excluded some areas in Oceania and South America. Occurrences were aggregated to half degree spatial resolution.
 {% endcapture %}
 {% include MAP.html %}
 
@@ -39,4 +39,4 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 ### Main references
 * Shmida A, Evenari M, Noy-Meir I (1986) Hot desert ecosystems: an integrated view.  In: Hot deserts and arid shrublands. (Eds. M Evenari, I Noy Meir, DW Goodall), pp. 379-387. Ecosystems of the World, Vol. 12b. Elsevier, Amsterdam.
 ### Map References
-* Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
+* Beck, H., Zimmermann, N., McVicar, T. et al. *Present and future Köppen-Geiger climate classification maps at 1-km resolution*. **Sci Data** 5, 180214 (2018). DOI: [10.1038/sdata.2018.214](https://doi.org/10.1038/sdata.2018.214)
