--- a/_EFGs/T7.2.md
+++ b/_EFGs/T7.2.md
@@ -5,7 +5,7 @@ realm: Terrestrial
 code: T7.2
 biomecode: T7
 contributors: DA Keith
-mapcontributors: DA Keith, JR Ferrer-Paris
+mapcontributors: JR Ferrer-Paris, DA Keith
 version: v1.0, 2020-01-20 12:00:00
 ---
 # Ecological Traits
@@ -25,7 +25,7 @@ High to moderate natural availability of water (from rainfall) and nutrients (fr
 Mostly in subtropical to temperate climatic zones and developed countries across Europe, east and south Asia, subtropical and temperate Africa, southern Australasia, north and central America and temperate south America.
 
 {% capture map_det %}
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
+The presence of sown pastures was approximated by selecting areas of overlap between existing irrigation infrastructure (Siebert et al. 2005; 2013) and presence of major lifestock (Gilbert et al. 2018). Occurrences were aggregated to half degree spatial resolution and reclassified as major occurrences (>60%) and minor occurrences (<60%).
 {% endcapture %}
 {% include MAP.html %}
 
@@ -34,4 +34,6 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 * Bernués A, Ruiz R, Olaizola A, Villalba D, Casasús I (2011) Sustainability of pasture-based livestock farming systems in the European Mediterranean context: Synergies and trade-offs. Livestock Science 139: 44–57.
 * Spedding CRW (1986) Animal production from grass: A systems approach. In: Bioindustrial ecosystems (Eds. DAJ Cole, GC Brander), pp107-120. Ecosystems of the world vol. 21. Elsevier, Amsterdam.
 ### Map References
-* Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
+* Siebert, S., Döll, P., Hoogeveen, J., Faures, J.-M., Frenken, K., Feick, S. (2005): *Development and validation of the global map of irrigation areas*. **Hydrology and Earth System Sciences**, 9, 535-547.
+* Siebert, S., Henrich, V., Frenken, K., Burke, J. (2013): **Update of the Global Map of Irrigation Areas to version 5**. Project report, 178 p.
+* Gilbert, M., Nicolas, G., Cinardi, G. et al. *Global distribution data for cattle, buffaloes, horses, sheep, goats, pigs, chickens and ducks in 2010*. **Sci Data** 5, 180227 (2018). DOI: [10.1038/sdata.2018.227](https://doi.org/10.1038/sdata.2018.227)
